Fix badge alignments

--- a/src/sass/layout/_wordpress.scss
+++ b/src/sass/layout/_wordpress.scss
@@ -115,7 +115,7 @@
   box-sizing: border-box;
   display: inline-block;
   font-size: 17px;
-  padding: 16px 0 16px 55px;
+  padding: 18px 0 16px 55px;
   position: relative;
   color: #444;
 
